2002-11-17 M Pollard <circlemaster@blueyonder.co.uk>
	* MetaserverService.cpp: Reformated, adapted for Ron's change to the
	  signal

	* StateManager.cpp: tidy up.

	* GuiService.cpp/h Widget.h: Altered for new factory idea.

2002-11-13 M Pollard <circlemaster@blueyonder.co.uk>
	* StateManager.cpp: Fixed the bug where widgets were going out of
	  scope, thus causing them not to be drawn.

	* StateManager.cpp: Fixed up findState so that it works

	* states.xml: added stateinfo for findState to find.

2002-11-12 M Pollard <circlemaster@blueyonder.co.uk>
	* configure.in: added to allow older distros to build

	* configure.ac: modified to workaround bug in libxml's AM_PATH (not
	  setting CPPFLAGS when checking only CFLAGS)

	* MetaserverService.cpp/h, Application.cpp/h: Removed DataModel, it's
	  buggy.

	* Dime.cpp Applicatition.cpp/h StateManager.cpp:
	  Moved Widget loading into StateManager.  Fixed a circular calling bug.

2002-11-12 M Pollard <circlemaster@blueyonder.co.uk>
        * configure.ac: modernised the syntax

2002-11-11 M Pollard <circlemaster@blueyonder.co.uk>
	* StateManager.cpp, StateManager.h: Begun work on new format here.

	* StateManagerTest.cpp: Fixed this up so that it should work now,
	  however I haven't readded it to the build as I want to complete
	  StateManager first.
	
	* configure.ac: made cppunit default on but given ability to turn off;
	                added libxml2.

	* NEWS: added mention of statemanager work.

2002-10-10 M Pollard <circlemaster@blueyonder.co.uk>
        * test/Makefile.am, StateManagerTest.cpp, TestServices.cpp: cut
	  out StateManager from the tests till I've finished redoing it.

	* StateManager.cpp, StateManager.h: stripping this down, need to
	  do things another way.

	* Label.h, Console.cpp, Console.h: Changed FONT_FILE to a static
	  const char* const, changed to wf_opal.ttf.

	* configure.ac: bumped required sigc++-1.2 version to 1.2.1 .
	
2002-10-10 M Pollard <circlemaster@blueyonder.co.uk>